--- a/Application/playersInfoGateAwayService/infrastructure/playersInfoServiceClient/buf.gen.yaml
+++ b/Application/playersInfoGateAwayService/infrastructure/playersInfoServiceClient/buf.gen.yaml
@@ -2,11 +2,11 @@ version: v1
 plugins:
   - name: go
     path: ../../bin/protoc-gen-go
-    out: pbGoFiles
+    out: api/pbGoFiles
     opt:
       - paths=source_relative
   - name: go-grpc
     path: ../../bin/protoc-gen-go-grpc
-    out: pbGoFiles
+    out: api/pbGoFiles
     opt:
       - paths=source_relative
