--- a/Application/PlayerInfoService/config/config.env
+++ b/Application/PlayerInfoService/config/config.env
@@ -1,4 +1,4 @@
-API_KEY=
-CONNECTION_STRING=
+API_KEY=5533655582:AAFpGBiN3zxtIrWORIL11biAMLMR63djJ10
+CONNECTION_STRING=postgres://postgres:Verbov3232132121@localhost:5432/playersDb
 NETWORK_TYPE=tcp
 PORT=:3030
